# TIMP_lab07

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
